--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 admin_credentials.txt
 
+docker-compose.yml
+!example.docker-compose.yml
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
